[package]
name = "rdfs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
base64 = "0.22.1"
chrono = "0.4.38"
clap = { version = "^4.5.18", features = ["derive"] }
lazy_static = "1.5.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ureq = { version = "2.10.1", features = ["json"] }
